deploy/overlays/local/node-envida/components/transform-rest-gateway/transform-rest-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: envida-transform-rest-gateway
  namespace: dh-health
spec:
  gatewayClassName: traefik
  listeners:
    - name: http
      port: 80
      protocol: HTTP
      hostname: transform.envida.local.dh.unimaas.nl
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: envida-transform-rest-route
  namespace: dh-health
spec:
  parentRefs:
    - name: envida-transform-rest-gateway
  hostnames:
    - transform.envida.local.dh.unimaas.nl
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: envida-transform-rest
          port: 8080
